# kwa2

source/: build.nix
source/native/: Cargo.toml  build.rs
source/native-bindgen/: Cargo.toml
source/native/src/: db.rs  dbutil.rs  main.rs  util.rs
source/native/src/interface/: c2s.rs  config.rs  db.rs  mod.rs  s2s.rs  shared.rs
source/native/src/subsystems/: oidc.rs
source/shared/: Cargo.toml
source/shared/src/: lib.rs
source/shared/src/interface/: mod.rs  shared.rs
source/shared/src/interface/wire/: c2s.rs  kwaurl.rs  mod.rs  s2c.rs  shared.rs
source/wasm/: Cargo.toml  build.rs
source/wasm/src/: api.rs  async_.rs  background.rs  chat.rs  chat_controls.rs  chat_entry.rs  chat_feed_channel.rs  chat_feed_controls.rs  chat_feed_outbox.rs  chat_message.rs  formutil.rs  infinite.rs  js.rs  lib.rs  localdata.rs  mathutil.rs  opfs.rs  outbox.rs  page_channel.rs  page_channel_delete.rs  page_channel_edit.rs  page_channel_join_url.rs  page_channel_menu.rs  page_channel_new.rs  page_channelgroup.rs  page_channelgroup_delete.rs  page_channelgroup_edit.rs  page_channelgroup_menu.rs  page_channelgroup_new.rs  page_channelinvite.rs  page_channelinvite_delete.rs  page_channelinvite_edit.rs  page_channelinvite_new.rs  page_channelinvites.rs  page_channelmember.rs  page_channelmember_delete.rs  page_channelmember_edit.rs  page_channelmembers.rs  page_identities.rs  page_identity.rs  (+17 more)
source/wasm/static/: index.html  index_test.html  manifest.json  serviceworker.js  style.js  style_export.d.ts  style_export2.d.ts  style_reset.css  style_test.js
