[package]
name = "native"
version = "0.1.0"
edition = "2024"

[dependencies]
aargvark = { version = "0.8", features = ["serde_json"] }
flowcontrol = "0.2"
glove = "0.4"
good-ormning-runtime = { version = "0.3", features = ["chrono", "sqlite"] }
http = "1"
htwrap = "0.13"
loga = "0.5"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
taskmanager = "0.6"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tokio-stream = { version = "0.1" }
rust-embed = { version = "8", features = [
    "mime-guess",
    "interpolate-folder-path",
] }
serde_json = "1"
hex = "0.4"
rand = "0.9"
spaghettinuum = { path = "../spaghettinuum/source" }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["array", "bundled"] }
deadpool-sqlite = "0.7"

[build-dependencies]
good-ormning = { version = "0.3", features = ["chrono", "sqlite"] }
