[package]
name = "native"
version = "0.1.0"
edition = "2024"

[dependencies]
aargvark = { version = "0.8", features = ["serde_json"] }
flowcontrol = "0.2"
glove = "0.4"
good-ormning-runtime = { version = "0.3", features = ["chrono", "sqlite"] }
http = "1"
htwrap = "0.13"
loga = "0.5"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
taskmanager = "0.6"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tokio-stream = { version = "0.1" }
rust-embed = { version = "8", features = [
    "mime-guess",
    "interpolate-folder-path",
] }
serde_json = "1"
hex = "0.4"
rand = "0.9"
spaghettinuum = { path = "../spaghettinuum/source/shared" }
spaghettinuum_native = { path = "../spaghettinuum/source/native" }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["array", "bundled"] }
deadpool-sqlite = "0.7"
shared = { path = "../shared" }
openidconnect = { version = "3", default-features = false }
oauth2 = { version = "4", default-features = false }
cookie = { version = "0.18" }
ts-rs = { version = "11", features = ["serde-json-impl"] }
moka = { version = "0.12", features = ["future"] }
http-serde = "2"
serde_urlencoded = "0.7"
hyper-tungstenite = { version = "0.17" }
hyper-util = "0.1"
hyper = "1"
http-body-util = "0.1"

[build-dependencies]
good-ormning = { version = "0.3", features = ["chrono", "sqlite"] }
