[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["jiff02"] }
sha2 = "0.10"
hex = "0.4"
ts-rs = { version = "11", features = ["serde-json-impl"] }
glove = "0.5"
spaghettinuum = { path = "../spaghettinuum/source/shared" }
serde_urlencoded = "0.7"
jiff = { version = "0.2", features = ["serde"] }
urlencoding = "2"

[lints.clippy]
all = "allow"
