[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
ezing = "0.2"
gloo = { version = "0.9", features = ["futures"] }
js-sys = "0.3"
reqwasm = { version = "0.5", features = ["json"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
wasm-bindgen = "=0.2.105"
wasm-bindgen-futures = { version = "0.4", features = [
    "futures-core-03-stream",
] }
web-sys = { version = "0.3", features = [
    "Cache",
    "CacheStorage",
    "WindowClient",
    "Clients",
    "ClientQueryOptions",
    "Clipboard",
    "ClipboardItem",
    "CssStyleDeclaration",
    "Document",
    "DomException",
    "DomParser",
    "DomRect",
    "ExtendableEvent",
    "FetchEvent",
    "History",
    "HtmlAudioElement",
    "HtmlDocument",
    "HtmlHeadingElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlMediaElement",
    "HtmlSelectElement",
    "HtmlVideoElement",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetDirectoryOptions",
    "KeyboardEvent",
    "Location",
    "MediaMetadata",
    "MediaQueryList",
    "MediaSession",
    "MediaSessionAction",
    "MessageEvent",
    "MouseEvent",
    "MediaError",
    "Navigator",
    "NodeList",
    "Notification",
    "NotificationOptions",
    "NotificationPermission",
    "PushEvent",
    "PushManager",
    "PushMessageData",
    "PushSubscription",
    "PushSubscriptionJson",
    "PushSubscriptionOptionsInit",
    "ServiceWorkerContainer",
    "ServiceWorkerGlobalScope",
    "ServiceWorkerRegistration",
    "StorageManager",
    "SupportedType",
    "Url",
    "VisibilityState",
    "WheelEvent",
    "WorkerLocation",
] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "sync"] }
hex = "0.4"
defer = "0.1"
shared = { path = "../shared" }
sha2 = "0.10"
lunk = { version = "0.3" }
rooting = { version = "0.2", features = ["futures"] }
rooting-forms = { version = "0.3", features = ["jiff"] }
urlencoding = "2"
qrcode = { version = "0.13", default-features = false, features = ["svg"] }
uuid = { version = "1", features = ["v4", "js"] }
serde_urlencoded = "0.7"
async-trait = "0.1"
flowcontrol = "0.2"
structre = "0.2"
by_address = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
mime2ext = "0.1"
spaghettinuum = { path = "../spaghettinuum/source/shared" }
jiff = { version = "0.2", features = ["serde"] }

[build-dependencies]
convert_case = "0.8"
genemichaels-lib = "0.7"
proc-macro2 = "1"
quote = "1"

[profile.release]
# Voodoo https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
codegen-units = 1
